--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <ul id="shopping-list">
                 <span>Fetching list...</span>
             </ul>
+            <footer>
+                <span>Made with ❤️ by Alex Jarabi</span> &middot;
+                <span>Image by <a href="https://pixabay.com/users/io-images-1096650/">IO-Images</a> from <a href="https://pixabay.com/">Pixabay</a></span>
+            </footer>
         </div>
         <script src="index.js" type="module"></script>
     </body>
